--- a/src/components/commentpage.css
+++ b/src/components/commentpage.css
@@ -1,8 +1,9 @@
 .comment-page-container{
   display: flex;
-  flex-direction: column;
+
   margin-top:20px;
-  justify-content: space-between;
+  justify-content: center;
+  gap:2em;
   
 }
 
@@ -10,21 +11,26 @@
   display: flex;
   height: 250px;
   gap:1em;
+  flex-direction: column;
+ 
+
+ 
   
 
 }
 
 .comm{
-  margin-left: 20px;
+
 }
 
 .commentsss{
   background-color: #3d3d3d;
   color:white;
-  width:45%;
-  align-self: center;
-  margin-right: 60px;
-  height: 100px;
+  width:100%;
+  border:solid white 2px;
+
+
+
   margin-bottom: 5px;
   padding-bottom: 10px;
 }
@@ -34,4 +40,33 @@
   flex-direction: column;
   margin-left: 20px;
   
+}
+.roundedv2{
+  width:30px;
+  height:30px;
+  object-fit: contain;
+  border:solid white 3px;
+  margin-top: 5px;
+ border-radius: 50%;
+ margin-right:5px;
+
+}
+
+.userr{
+  display: flex;
+  align-items: center;
+  gap:0.5em;
+ 
+}
+
+.tago{
+  font-size: 12px;
+}
+
+.outer-cm-div{
+  width:20%;
+}
+
+.inner-cf{
+  width: 100%;
 }
