--- a/src/components/profile.css
+++ b/src/components/profile.css
@@ -1,7 +1,9 @@
 .profile-container {
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap:2em;
+    margin-top:150px;
   }
   
   h1 {
@@ -34,4 +36,14 @@
   .subreddit-item:hover {
     background-color: #f1f1f1;
   }
+
+  .int-d{
+    display: flex;
+    align-items: center;
+  }
   
+
+  .last-bt{
+    width:80px;
+    height:30px;;
+  }
