--- a/src/components/subreddit.css
+++ b/src/components/subreddit.css
@@ -6,13 +6,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
+ 
   background-color: #3d3d3d;
-  margin-top: 100px;
-  
-  padding-top: 30px;
-  border: solid white 1px;
-  margin-left: 400px;
+  width:50%;
+border-radius: 10px;
 }
 
 
@@ -54,6 +51,14 @@
   width:100px;
   height:30px;
   align-items: center;
-  cursor:pointer
+  cursor:pointer;
+  margin:10px;
 }
 
+.jp{
+  width:100%;
+  height:100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
